# quishbot

./: .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
quishbot/: config.py  main.py  obs.py  redeems.py  redishandler.py  twitch.py
quishbot/queues/: generic.py  local.py  redis.py
quishbot/redeem_commands/: __init__.py  squish.py
quishbot/types/: redeem.py
